[gd_scene load_steps=4 format=2]

[ext_resource path="res://interface/CustomizationScreen.gd" type="Script" id=1]
[ext_resource path="res://meme.png" type="Texture" id=2]
[ext_resource path="res://character/Character.tscn" type="PackedScene" id=3]

[node name="CustomizationScreen" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 256, 256 )
texture = ExtResource( 2 )

[node name="HairColor" type="ColorPickerButton" parent="."]
margin_left = 439.0
margin_top = 69.0
margin_right = 471.0
margin_bottom = 89.0
hint_tooltip = "Hair Color"
color = Color( 1, 1, 1, 1 )

[node name="EyeColor" type="ColorPickerButton" parent="."]
margin_left = 439.0
margin_top = 93.0
margin_right = 471.0
margin_bottom = 113.0
hint_tooltip = "Eye Color"
color = Color( 1, 1, 1, 1 )

[node name="ShirtColor" type="ColorPickerButton" parent="."]
margin_left = 439.0
margin_top = 117.0
margin_right = 471.0
margin_bottom = 137.0
hint_tooltip = "Shirt Color"
color = Color( 1, 1, 1, 1 )

[node name="PantsColor" type="ColorPickerButton" parent="."]
margin_left = 439.0
margin_top = 141.0
margin_right = 471.0
margin_bottom = 161.0
hint_tooltip = "Shirt Color"
color = Color( 1, 1, 1, 1 )

[node name="SkinColor" type="ColorPickerButton" parent="."]
margin_left = 439.0
margin_top = 165.0
margin_right = 471.0
margin_bottom = 185.0
hint_tooltip = "Skin Color"
color = Color( 1, 1, 1, 1 )

[node name="HairList" type="ItemList" parent="."]
margin_left = 333.0
margin_top = 203.0
margin_right = 476.0
margin_bottom = 307.0
max_columns = 4

[node name="Randomize" type="Button" parent="."]
margin_left = 335.0
margin_top = 320.0
margin_right = 475.0
margin_bottom = 340.0
text = "Randomize!"

[node name="Character" parent="." instance=ExtResource( 3 )]
position = Vector2( 146.256, 245.712 )
scale = Vector2( 2, 2 )
BASE_SPEED = 0.0

[connection signal="color_changed" from="HairColor" to="." method="_on_HairColor_color_changed"]
[connection signal="color_changed" from="EyeColor" to="." method="_on_EyeColor_color_changed"]
[connection signal="color_changed" from="ShirtColor" to="." method="_on_ShirtColor_color_changed"]
[connection signal="color_changed" from="PantsColor" to="." method="_on_PantsColor_color_changed"]
[connection signal="color_changed" from="SkinColor" to="." method="_on_SkinColor_color_changed"]
[connection signal="item_activated" from="HairList" to="." method="_on_ItemList_item_activated"]
[connection signal="pressed" from="Randomize" to="." method="_on_Randomize_pressed"]
[connection signal="avatar_changed" from="Character" to="." method="_on_Character_avatar_changed"]
